pyarmor.bug.log
[BUG]: invalid syntax (<frozen app>, line 5)

## Command Line
/Users/zahrazohrevand/DayTradingApp/venv/bin/pyarmor gen --pack Sniper_AI.spec --expired 2026-01-14 app.py

## Environments
Python 3.13.5
Pyarmor 9.2.3 (trial), 000000, non-profits
Platform darwin.aarch64
Native darwin.arm64
Home /Users/zahrazohrevand/.pyarmor

## Traceback
Traceback (most recent call last):
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/__main__.py", line 796, in main
    main_entry(sys.argv[1:])
    ~~~~~~~~~~^^^^^^^^^^^^^^
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/__main__.py", line 789, in main_entry
    return args.func(ctx, args)
           ~~~~~~~~~^^^^^^^^^^^
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/__main__.py", line 244, in cmd_gen
    builder.process(options, packer=packer)
    ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/generate.py", line 188, in process
    self._obfuscate_scripts()
    ~~~~~~~~~~~~~~~~~~~~~~~^^
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/generate.py", line 144, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/core/__init__.py", line 95, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "<maker>", line 728, in generate_obfuscated_script
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
  File "<maker>", line 521, in process
  File "/Users/zahrazohrevand/DayTradingApp/venv/lib/python3.13/site-packages/pyarmor/cli/resource.py", line 156, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
                 ~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
                   _feature_version=feature_version, optimize=optimize)
  File "<frozen app>", line 5
    import sys, os, json, logging, threading, time, requests, subprocess, webbrowserimport eventlet
                                                                                           ^^^^^^^^
SyntaxError: invalid syntax


